--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Oliver Carr
 
 # Short description of your site
 description: A virtual proof that name is awesome!
@@ -24,15 +24,16 @@ description: A virtual proof that name is awesome!
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  Projects:
+    - Circadian Rhythms in Mental Health: "http://deanattali.com/beautiful-jekyll/"
+    - Heart Rate Variability in Mental Health: "https://pages.github.com/"
+    - Arrhythmia Detection: "http://www.markdowntutorial.com/"
+    
+  Author's home: "https://oliver-carr.github.io/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/profileim.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
