--- a/_config.yml
+++ b/_config.yml
@@ -7,29 +7,24 @@
 url: "http://username.github.io"
 baseurl: ""
 
-# If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
-
-# Of course don't forget to change the username and projectname to YOUR username and project
-
 # Name of website
 title: Oliver Carr
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Personal page
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  Home: "index"
+  About Me: "aboutme"  
   Projects:
     - Circadian Rhythms in Mental Health: "http://deanattali.com/beautiful-jekyll/"
     - Heart Rate Variability in Mental Health: "https://pages.github.com/"
     - Arrhythmia Detection: "http://www.markdowntutorial.com/"
-    
-  Author's home: "https://oliver-carr.github.io/"
+  Publications: "pubs"    
+  Contact: "contact"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -43,9 +38,11 @@ avatar: "/img/profileim.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#315A9B"
-navbar-text-col: "#FFFFFF"
-navbar-children-col: "#F5F5F5"
+#navbar-col: "#F5F5F5"
+#navbar-text-col: "#404040"
+navbar-col: "#404040"
+navbar-text-col: "#F5F5F5"
+navbar-children-col: "#404040"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
@@ -76,27 +73,15 @@ social-network-links:
   github: oliver-carr
   twitter: Oliver__Carr
   linkedin: oliver-carr-4210107b
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
+  googlescholar: dpFEilMAAAAJ
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
+  twitter: false
+  facebook: false
   google: false
-  linkedin: true
+  linkedin: false
 
-# How to display the link to the website in the footer
-# Remove this if you don't want a link in the footer
-url-pretty: "oliver-carr.github.io/"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
