--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -95,3 +95,8 @@ yelp:
   name: "Yelp"
   baseURL: "https://{{ site.author.yelp }}.yelp.com"
   icon: "fa-yelp"
+
+googlescholar:
+  name: "Google Scholar"
+  baseURL: "https://scholar.google.co.uk/citations?user="
+  icon: "ai-google-scholar"
