--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ avatar: "/img/profileim.png"
 
 #navbar-col: "#F5F5F5"
 #navbar-text-col: "#404040"
-navbar-col: "#404040"
+navbar-col: "#054187"
 navbar-text-col: "#F5F5F5"
 navbar-children-col: "#404040"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#9ec8d8"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
