--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ avatar: "/img/profileim.png"
 
 #navbar-col: "#F5F5F5"
 #navbar-text-col: "#404040"
-navbar-col: "#054187"
-navbar-text-col: "#F5F5F5"
+navbar-col: "#9ec8d8"
+navbar-text-col: "#404040"
 navbar-children-col: "#404040"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
