--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ avatar: "/img/profileim.png"
 #navbar-text-col: "#404040"
 navbar-col: "#9ec8d8"
 navbar-text-col: "#404040"
-navbar-children-col: "#404040"
+navbar-children-col: "#9ec8d8"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
